# dna-analysis

./: LICENSE  README.md  dna-analysis.cabal
src/: Dna.hs  Freq.hs  Protein.hs  Rna.hs  Test.hs  Translation.hs
