name:                dna-analysis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mbernat/dna-analysis#readme
license:             BSD3
license-file:        LICENSE
author:              Marek Bernat
maintainer:          marek.bernat@gmail.com
copyright:           2017 Marek Bernat
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dna
                     , Freq
                     , Protein
                     , Rna
                     , Test
                     , Translation
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , hashmap
                     , split
  default-language:    Haskell2010

test-suite dna-analysis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dna-analysis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mbernat/dna-analysis
